--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<!--投稿一覧-->
+<h1>Books</h1>
+
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th colspan="3"></th>
+  </tr>
+  <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td><%= link_to 'Show' %></td>
+      <td><%= link_to 'Edit' %></td>
+      <td><%= link_to 'Destroy' %></td>
+    </tr>
+  <% end %>
+</table>
+
+<!--新規投稿-->
+<h2>New book</h2>
+<%= form_with model:@book, local:true do |f| %>
+  <label>Title</label>
+  <div class="field">
+    <%= f.text_field :title %>
+  </div>
+  <label>Body</label>
+  <div class="field">
+    <%= f.text_area :body%>
+  </div>
+  <div class="btn">
+    <%= f.submit 'Create Book'%>
+  </div>
+<% end %>
