--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -6,7 +6,10 @@ body{
   margin: 33px;
 }
 
-p{
+p, td{
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
   margin: 33px;
 }
 
