--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,19 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+<%= form_with model:@book, local:true do |f|%>
+  <label>Title</label>
+  <div class="field">
+    <%= f.text_field :title %>
+  </div>
+  <label>Body</label>
+  <div class="field">
+    <%= f.text_area :body%>
+  </div>
+  <div class="btn">
+    <%= f.submit 'Update Book'%>
+  </div>
+<% end %>
+
+<!--各種リンク-->
+<%= link_to 'Show', book_path %>
+|
+<%= link_to 'Back', books_path %>
