--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,20 +2,24 @@
 <h1>Books</h1>
 
 <table>
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <th colspan="3"></th>
-  </tr>
-  <% @books.each do |book| %>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
     <tr>
       <td><%= book.title %></td>
       <td><%= book.body %></td>
-      <td><%= link_to 'Show' %></td>
-      <td><%= link_to 'Edit' %></td>
-      <td><%= link_to 'Destroy' %></td>
+      <td><%= link_to 'Show', book_path(book.id) %></td>
+      <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
+      <td><%= link_to 'Destroy', book_path, method: :DELETE %></td>
     </tr>
   <% end %>
+  </tbody>
 </table>
 
 <!--新規投稿-->
