--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<p id="notice"><%=flash[:notice]%></p>
 <p><strong>Title:</strong> <%= @book.title %></p>
 <p><strong>Body:</strong> <%= @book.body %></p>
 <%= link_to 'Edit', edit_book_path %>
