--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,5 @@
+
+
 // 共通レイアウト
 body{
   color: #333;
@@ -7,7 +9,7 @@ body{
   margin: 33px;
 }
 
-p, td{
+p, td, ul{
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -43,4 +45,35 @@ div.field, div.btn{
 
 #notice{
   color: green;
+}
+
+.field_with_errors{
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+
+// エラ-メッセージ
+#error_explanation{
+  width: 450px;
+  padding: 7px 7px 0px 7px;
+  margin-bottom: 20px;
+  border: 2px solid red;
+  background-color: #f0f0f0;
+}
+
+#error_explanation h2{
+  text-align: left;
+  font-weight: bold;
+  font-size: 12px;
+  padding: 5px 5px 5px 15px;
+  margin: -7px;
+  margin-bottom: 0px;
+  color: white;
+  background-color: #c00;
+}
+
+#error_explanation ul li{
+  font-size: 12px;
+  list-style: square;
 }
