--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,4 @@
 <!--投稿一覧-->
-<p id="notice"><%=flash[:notice]%></p>
 <h1>Books</h1>
 
 <table>
@@ -25,15 +24,49 @@
 
 <!--新規投稿-->
 <h2>New book</h2>
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%=message%></li>
+      <%end%>
+    </ul>
+  </div>
+<%end%>
+
 <%= form_with model:@book, local:true do |f| %>
-  <label>Title</label>
+<!--Title-->
   <div class="field">
-    <%= f.text_field :title %>
+    <% if @book.errors.any? %>
+      <div class="field_with_errors">
+        <label>Title</label>
+      </div>
+      <div class="field_with_errors">
+        <%= f.text_field :title %>
+      </div>
+    <% else %>
+      <label>Title</label>
+      <%= f.text_field :title %>
+    <% end %>
   </div>
-  <label>Body</label>
+  
+<!--Body-->
   <div class="field">
-    <%= f.text_area :body%>
+    <% if @book.errors.any? %>
+      <div class="field_with_errors">
+        <label>Body</label>
+      </div>
+      <div class="field_with_errors">
+        <%= f.text_area :body %>
+      </div>
+    <% else %>
+      <label>Body</label>
+      <%= f.text_area :body %>
+    <% end %>
   </div>
+  
+<!--Btn-->
   <div class="btn">
     <%= f.submit 'Create Book'%>
   </div>
