--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -38,16 +38,26 @@
 <%= form_with model:@book, local:true do |f| %>
 <!--Title-->
   <div class="field">
-    <label>Title</label>
-    <%= f.text_field :title %>
+    <% if @book.errors.any? %>
+      <div class="field_with_errors"><label>Title</label></div>
+      <%= f.text_field :title %>
+    <% else %>
+      <label>Title</label>
+      <%= f.text_field :title %>
+    <% end %>
   </div>
-  
+
 <!--Body-->
   <div class="field">
-    <label>Body</label>
-    <%= f.text_area :body %>
+    <% if @book.errors.any? %>
+      <div class="field_with_errors"><label>Body</label></div>
+      <%= f.text_area :body %>
+    <% else %>
+      <label>Body</label>
+      <%= f.text_area :body %>
+    <% end %>
   </div>
-  
+
 <!--Btn-->
   <div class="btn">
     <%= f.submit 'Create Book'%>
