--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,13 +1,38 @@
+<!--編集ページ-->
 <h1>Editing Book</h1>
+
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%=message%></li>
+      <%end%>
+    </ul>
+  </div>
+<%end%>
+
 <%= form_with model:@book, local:true do |f|%>
-  <label>Title</label>
   <div class="field">
-    <%= f.text_field :title %>
+    <% if @book.errors.any? %>
+      <div class="field_with_errors"><label>Title</label></div>
+      <%= f.text_field :title %>
+    <% else %>
+      <label>Title</label>
+      <%= f.text_field :title %>
+    <%end%>
   </div>
-  <label>Body</label>
+  
   <div class="field">
-    <%= f.text_area :body%>
+    <% if @book.errors.any? %>
+      <div class="field_with_errors"><label>Body</label></div>
+      <%= f.text_area :body %>
+    <% else %>
+      <label>Body</label>
+      <%= f.text_area :body %>
+    <%end%>
   </div>
+  
   <div class="btn">
     <%= f.submit 'Update Book'%>
   </div>
