--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
     <tr>
       <td><%= book.title %></td>
       <td><%= book.body %></td>
-      <td><%= link_to 'Show', book_path(book.id) %></td>
+      <td><%= link_to 'Show', book_path(book) %></td>
       <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
       <td><%= link_to 'Destroy', book_path(book.id), method: :delete, "data-confirm"=>"Are you sure?" %></td>
     </tr>
