--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,18 +24,18 @@
 
 <!--新規投稿-->
 <h2>New book</h2>
-<% if @book.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%=message%></li>
-      <%end%>
-    </ul>
-  </div>
-<%end%>
-
 <%= form_with model:@book, local:true do |f| %>
+<!--エラーメッセージ-->
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%=message%></li>
+        <%end%>
+      </ul>
+    </div>
+  <%end%>
 <!--Title-->
   <div class="field">
     <% if @book.errors.any? %>
