--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -39,10 +39,12 @@
 <!--Title-->
   <div class="field">
     <% if @book.errors.any? %>
-      <div class="field_with_errors"><label>Title</label></div>
+      <div class="field_with_errors">
+        <label for="book_title">Title</label>
+      </div>
       <%= f.text_field :title %>
     <% else %>
-      <label>Title</label>
+      <label for="book_title">Title</label>
       <%= f.text_field :title %>
     <% end %>
   </div>
@@ -50,10 +52,12 @@
 <!--Body-->
   <div class="field">
     <% if @book.errors.any? %>
-      <div class="field_with_errors"><label>Body</label></div>
+      <div class="field_with_errors">
+        <label for="book_body">Body</label>
+      </div>
       <%= f.text_area :body %>
     <% else %>
-      <label>Body</label>
+      <label for="book_body">Body</label>
       <%= f.text_area :body %>
     <% end %>
   </div>
