--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,16 +9,8 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-      <td><%= book.title %></td>
-      <td><%= book.body %></td>
-      <td><%= link_to 'Show', book_path(book) %></td>
-      <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
-      <td><%= link_to 'Destroy', book_path(book.id), method: :delete, "data-confirm"=>"Are you sure?" %></td>
-    </tr>
-  <% end %>
+  <tbody id="books_index">
+    <%= render 'books/index', books: @books%>
   </tbody>
 </table>
 
@@ -48,7 +40,6 @@
       <%= f.text_field :title %>
     <% end %>
   </div>
-
 <!--Body-->
   <div class="field">
     <% if @book.errors.any? %>
@@ -61,7 +52,6 @@
       <%= f.text_area :body %>
     <% end %>
   </div>
-
 <!--Btn-->
   <div class="btn">
     <%= f.submit 'Create Book'%>
